Added swagger documentation for all Api's
